--- a/config.toml
+++ b/config.toml
@@ -55,13 +55,23 @@ id = "UA-00000000-0"
 [languages.en]
 title = "Goldydocs"
 description = "A Docsy example site"
-languageName ="English"
+languageName = "English"
 # Weight used for sorting.
 weight = 1
+
+[languages.zh]
+title = "Goldydocs"
+description = "Hugo Docsy 示例站点"
+languageName = "中文"
+weight = 2
+contentDir = "content/zh"
+time_format_default = "2006-02-01"
+time_format_blog = "2006-02-01"
+
 [languages.no]
 title = "Goldydocs"
 description = "Docsy er operativsystem for skyen"
-languageName ="Norsk"
+languageName = "Norsk"
 contentDir = "content/no"
 time_format_default = "02.01.2006"
 time_format_blog = "02.01.2006"
@@ -69,7 +79,7 @@ time_format_blog = "02.01.2006"
 [languages.fa]
 title = "اسناد گلدی"
 description = "یک نمونه برای پوسته داکسی"
-languageName ="فارسی"
+languageName = "فارسی"
 contentDir = "content/fa"
 time_format_default = "2006.01.02"
 time_format_blog = "2006.01.02"
@@ -116,7 +126,7 @@ version = "0.0"
 url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/google/docsy-example"
+github_repo = "https://github.com/speedoops/docsy-example"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
 github_project_repo = "https://github.com/google/docsy"
 
@@ -170,35 +180,35 @@ enable = false
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
-[[params.links.user]]
-	name = "User mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discussion and help from your fellow users"
-[[params.links.user]]
-	name ="Twitter"
-	url = "https://example.org/twitter"
-	icon = "fab fa-twitter"
-        desc = "Follow us on Twitter to get the latest news!"
-[[params.links.user]]
-	name = "Stack Overflow"
-	url = "https://example.org/stack"
-	icon = "fab fa-stack-overflow"
-        desc = "Practical questions and curated answers"
+#[[params.links.user]]
+#	name = "User mailing list"
+#	url = "https://example.org/mail"
+#	icon = "fa fa-envelope"
+#   desc = "Discussion and help from your fellow users"
+#[[params.links.user]]
+#	name ="Twitter"
+#	url = "https://example.org/twitter"
+#	icon = "fab fa-twitter"
+#   desc = "Follow us on Twitter to get the latest news!"
+#[[params.links.user]]
+#	name = "Stack Overflow"
+#	url = "https://example.org/stack"
+#	icon = "fab fa-stack-overflow"
+#   desc = "Practical questions and curated answers"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/google/docsy"
+	url = "https://github.com/speedoops/docsy-example"
 	icon = "fab fa-github"
-        desc = "Development takes place here!"
-[[params.links.developer]]
-	name = "Slack"
-	url = "https://example.org/slack"
-	icon = "fab fa-slack"
-        desc = "Chat with other project developers"
-[[params.links.developer]]
-	name = "Developer mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discuss development issues around the project"
+    desc = "Development takes place here!"
+#[[params.links.developer]]
+#	name = "Slack"
+#	url = "https://example.org/slack"
+#	icon = "fab fa-slack"
+#    desc = "Chat with other project developers"
+#[[params.links.developer]]
+#	name = "Developer mailing list"
+#	url = "https://example.org/mail"
+#	icon = "fa fa-envelope"
+#    desc = "Discuss development issues around the project"
 
