--- a/config.toml
+++ b/config.toml
@@ -45,9 +45,9 @@ quality = 75
 anchor = "smart"
 
 [services]
-[services.googleAnalytics]
+#[services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "UA-00000000-0"
+#id = "UA-00000000-0"
 
 # Language configuration
 
@@ -128,7 +128,7 @@ url_latest_version = "https://example.com"
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/speedoops/docsy-example"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/google/docsy"
+github_project_repo = "https://github.com/speedoops/docsy"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
