--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,8 @@ theme = ["docsy"]
 enableGitInfo = true
 
 # Language settings
-contentDir = "content/en"
-defaultContentLanguage = "en"
+contentDir = "content/zh"
+defaultContentLanguage = "zh"
 defaultContentLanguageInSubdir = false
 # Useful when translating.
 enableMissingTranslationPlaceholders = true
@@ -58,6 +58,7 @@ description = "A Docsy example site"
 languageName = "English"
 # Weight used for sorting.
 weight = 1
+contentDir = "content/en"
 
 [languages.zh]
 title = "Goldydocs"
